--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <p>This is a test page to display embedded messaging.</p>
 
 <!-- Display Image -->
-<img src="PrintReachUIImage.png" alt="Sample Image" style="width: 110px; height: 110px;">
+<img src="PrintReachUIImage.png" alt="Sample Image" style="width: 100vw; height: 100vh;">
  
 <!-- Script for Embedded Messaging -->
 <script type='text/javascript'>
