--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
 	function initEmbeddedMessaging() {
 		try {
 			embeddedservice_bootstrap.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
+
 			embeddedservice_bootstrap.init(
 				'00DKd000006PXKd',
-				'MIAWGITDeployment',
-				'https://ne1731472210030.my.site.com/ESWMIAWGITDeployment1733396247243',
+				'PrintReachServiceAgent',
+				'https://ne1731472210030.my.site.com/ESWPrintReachServiceAgent1737540341602',
 				{
 					scrt2URL: 'https://ne1731472210030.my.salesforce-scrt.com'
 				}
@@ -30,6 +31,6 @@
 		}
 	};
 </script>
-<script type='text/javascript' src='https://ne1731472210030.my.site.com/ESWMIAWGITDeployment1733396247243/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
+<script type='text/javascript' src='https://ne1731472210030.my.site.com/ESWPrintReachServiceAgent1737540341602/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>	
 </body>
 </html>
